force-app/main/default/objects/Bloom_Module_Config__mdt/Bloom_Module_Config__mdt.object-meta.xml
<CustomObject>
    <label>Bloom Module Config</label>
    <pluralLabel>Bloom Module Configs</pluralLabel>
</CustomObject>