force-app/main/default/objects/Bloom_Module_Config__mdt/fields/Amount_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Amount_Threshold__c</fullName>
    <label>Amount Threshold</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>