force-app/main/default/objects/Bloom_Module_Config__mdt/fields/Config_JSON__c.field-meta.xml
<CustomField>
    <fullName>Config_JSON__c</fullName>
    <label>Config JSON</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>