force-app/main/default/objects/Bloom_Module_Config__mdt/fields/Max_Days__c.field-meta.xml
<CustomField>
    <fullName>Max_Days__c</fullName>
    <label>Max Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>