force-app/main/default/objects/Bloom_Module_Config__mdt/fields/Validation_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Validation_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Validation Enabled</label>
    <type>Checkbox</type>
</CustomField>